tests/suite/snapshots/all__suite__remove_dependency_test__add_dependency_config.snap
---
source: tests/suite/remove_dependency_test.rs
expression: toml_after_add
---
[project]
name = "with-dependency"

[dependencies]
spring-boot-starter-jdbc = { version = "4.1.0", group = "org.springframework.boot" }
