tests/suite/snapshots/all__suite__remove_dependency_test__remove_dependency_config.snap
---
source: tests/suite/remove_dependency_test.rs
expression: toml_after_remove
---
[project]
name = "with-dependency"

[dependencies]
